syntax = "proto3";

option csharp_namespace = "Integration";

package timeslots;

service TimeSlotService {
    rpc GetAvailableTimeSlots (TimeSlotRequest) returns (TimeSlotResponse);
}

message TimeSlotRequest {
    string hospitalId = 1;
    string date = 2;  // YYYY-MM-DD format
}

message TimeSlotResponse {
    repeated string timeslots = 1;  // "HH:mm" format
}
